--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,9 @@
                         <rule>
                             <limits>
                                 <limit>
-                                    <counter>ВАШ COUNTER</counter>
+                                    <counter>BRANCH</counter>
                                     <value>COVEREDRATIO</value>
-                                    <minimum>100%</minimum>
+                                    <minimum>60%</minimum>
                                 </limit>
                             </limits>
                         </rule>
